--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "fetch:cpi": "node scripts/fetch-cpi.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
