--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "fetch:cpi": "node scripts/fetch-cpi.mjs"
+    "fetch:cpi": "node scripts/fetch-cpi.mjs --series cuur | cat"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
