add gas prices fetch

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint",
     "start": "next start",
     "fetch:cpi": "node --env-file=.env scripts/fetch-cpi.mjs --series cuur",
+    "fetch:gas": "node --env-file=.env scripts/fetch-gas-prices.mjs",
     "wid:extract": "node scripts/wid-extract-us.mjs",
     "wid:extract:income": "node scripts/wid-extract-income-us.mjs",
     "fetch:income-gap": "node scripts/fetch-income-gap.mjs"
