Update S&P 500 details and fetch script for SP500 series

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "fetch:income-gap": "node scripts/fetch-income-gap.mjs",
     "fetch:deficit": "node --env-file=.env scripts/fetch-deficit-fred.mjs",
     "fetch:unemployment": "node --env-file=.env scripts/fetch-unemployment.mjs",
-    "fetch:sp500": "node --env-file=.env scripts/fetch-sp500.mjs --series NASDAQCOM",
+    "fetch:sp500": "node --env-file=.env scripts/fetch-sp500.mjs --series SP500",
     "fetch:nasdaq": "node --env-file=.env scripts/fetch-sp500.mjs --series NASDAQCOM"
   },
   "dependencies": {
